--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
-h1 {
-  color:blue;
+
+
+.flashy {
+  color: red;
+  font-style: italic;
+}
+
+.best {
+  font-size: 50px;
+  font-weight:bolder;
+  color: orange;
 }
